# pci-source-zones

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml
config/: montecito.yaml
docs/: channel_initiation_physical_interpretation.docx
notebooks/: FIS.ipynb  FIS_setting_slope_density_vege.ipynb  alphaearth_landslide_unet_pipeline.ipynb  alphaearth_obtain_for_aoi.ipynb  gee_lai_ndvi_et_workflow.ipynb  gnn_source_zone_workflow.ipynb  logistic_regression_source_zone_workflow.ipynb  random_forest_source_zone_workflow.ipynb  unet_source_zone_workflow.ipynb
scripts/: 01_prepare_terrain.py  02_compute_c.py  03_compute_pci.py  04_extract_sources.py  05_validate.py  06_make_source_areas.py  _bootstrap.py  run_all.py
src/pci_source_zones/: __init__.py  c_model.py  config.py  inputs.py  monte_carlo.py  pci.py  pipeline.py  polygons.py  source_area.py  terrain.py
tests/: test_c_model.py  test_inputs.py  test_pci.py  test_polygons.py  test_smoke.py  test_source_area.py
