[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pci-source-zones"
version = "0.1.0"
description = "Simple PCI and source-polygon workflow for postfire channel initiation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "landlab>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
